# quart_back

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
app/: main.py
app/api/: __init__.py  customers_router.py  hello_router.py  login_router.py  users_router.py
app/api/routes/: __init__.py  hello_router.py  users_router.py
app/core/: config.py  error_handlers.py  middleware.py  setup.py
app/core/db/: database.py
app/models/: __init__.py  base_model.py  customer_connections_model.py  customer_model.py  hello_world.py  user_model.py
app/schemas/: __init__.py  customer_schema.py  hello_world_schema.py  login_schema.py  user_schema.py
